home page spacing issue

--- a/client-side/src/components/common/core-titles/CoreTitles.module.scss
+++ b/client-side/src/components/common/core-titles/CoreTitles.module.scss
@@ -9,6 +9,11 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 8px;
+
+    @media (max-width: 992px) {
+      gap: 4px;
+    }
 
     .CoreSubTitle {
       font-size: 18px;
