--- a/client-side/src/components/home/home-projects/HomeProjects.module.scss
+++ b/client-side/src/components/home/home-projects/HomeProjects.module.scss
@@ -2,4 +2,10 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+
+  margin: 80px 0;
+
+  @media (max-width: 768px) {
+    margin: 40px 0;
+  }
 }
